fix: bar spacing

--- a/src/bar/_bar.scss
+++ b/src/bar/_bar.scss
@@ -7,7 +7,7 @@ window.bar {
 	color: theme.$text;
 
 	> centerbox {
-		margin: 0px 8px;
+		margin: 6px 8px;
 	}
 
 	.group,
