--- a/src/quick-settings/_quick-settings.scss
+++ b/src/quick-settings/_quick-settings.scss
@@ -8,7 +8,7 @@ window.quick-settings {
 
 	background: theme.$background-secondary;
 	border: 2px solid theme.$background-tertiary;
-	margin: 4px 8px;
+	margin: 2px 8px;
 	padding: 8px 8px;
 	border-radius: 16px;
 
